# safety-scout

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  errors.py  logging_config.py  main.py  rate_limit.py
backend/app/llm/: base.py  claude_cli.py  doubao.py  parser.py  prompt.py
backend/app/quality/: __init__.py  accept_rules.py  judge_rubric.py  judge_service.py
backend/app/routes/: feedback.py  health.py  inspections.py  inspections_v2.py  quality.py
backend/app/safety_agent/: __init__.py  agent.py  loader.py  prompt.py  tools.py
backend/app/schemas/: feedback.py  inspection.py  inspection_v2.py  report.py  report_v2.py
backend/app/services/: image.py  inspection.py  inspection_v2.py  quality_trend.py
backend/app/storage/: db.py  feedback_repo.py  inspection_repo.py  judgments_repo.py  metrics_repo.py
backend/app/tasks/: inspection_runner.py  inspection_runner_v2.py
backend/scripts/: dump_metrics.py  judge_versions.py  poc_claude.py  replay_capture.py  v1_vs_v2_ab.py  v2_smoke.py  verify_sdk.py
backend/tests/: conftest.py
backend/tests/integration/: test_feedback_e2e.py  test_inspection_e2e.py  test_inspection_v2_e2e.py  test_lifecycle.py  test_quality_route.py  test_rate_limit.py  test_routes.py
backend/tests/unit/: test_accept_rules.py  test_claude_cli_provider.py  test_config.py  test_dependencies.py  test_doubao_provider.py  test_errors.py  test_fake_provider.py  test_feedback_repo.py  test_feedback_schemas.py  test_image_service.py  test_inspection_repo.py  test_inspection_runner.py  test_inspection_service.py  test_inspection_service_metrics.py  test_inspection_v2_service_metrics.py  test_judge_rubric.py  test_judge_service.py  test_llm_parser.py  test_logging_config.py  test_metrics_repo.py  test_prompt.py  test_provider_contract.py  test_quality_trend_service.py  test_report_v2_schemas.py  test_safety_agent_agent.py  test_safety_agent_loader.py  test_safety_agent_prompt.py  test_safety_agent_tools.py  test_schemas.py  test_skill_loader_ttl.py
docs/: deploy.md  (+1 more)
(+228 files in other folders)
