[project]
name = "safety-scout-backend"
version = "0.1.0"
description = "Construction site safety hazard identification backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    # Doubao provider 走 Ark 的 HTTP 接口，httpx 进主 deps
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "uvicorn[standard]>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的 Depends/File/Query/Body/Form 等就是要在参数默认值里调用 ——
# 这是框架约定，不是 mutable-default 反模式。把它们从 B008 豁免。
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
